correction bug d'affichage du menu version mobile

--- a/css/modal.css
+++ b/css/modal.css
@@ -77,7 +77,7 @@ img {
         display:flex;
         flex-direction:column;
         width:100%;
-        height:50vh;  
+        height:100vh;  
         position:absolute;
         top:100px;
         right:0;     
@@ -153,7 +153,7 @@ img {
         transform:translateY(12px)
       }
       .show-nav .bar {
-        width:0;
+        width:60px;
         background:transparent;    
       }
       .show-nav .bar::before {
